sample/error/e01001.asn
E01001 DEFINITIONS ::=
BEGIN
	#Invalid1 ::= INTEGER  -- ERROR E01001
	Invalid2* ::= INTEGER  -- ERROR E01001
	Invalid3?Char ::= INTEGER  -- ERROR E01001
END
